--- a/_sass/components/_main-menu.scss
+++ b/_sass/components/_main-menu.scss
@@ -11,13 +11,15 @@
       list-style: none;
       font-size: 1rem;
       > a {
-        padding: 10px 12px 10px 12px;
+        padding: 10px 16px 10px 16px;
         display: inline-block;
         font-weight: normal;
         text-decoration: none;
         color: $primary;
         &:hover {
-          text-decoration: underline;
+          opacity: 0.6;
+          text-decoration: none;
+          transition: all 100ms ease-in 100ms;
         }
       }
       &.active {
@@ -26,7 +28,7 @@
           text-decoration: none;
           &:hover {
             text-decoration: none;
-            transition: all 225ms ease-in 0s;
+            transition: all 100ms ease-in 100ms;
           }
         }
       }
