--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 
 // Colors
 $primary: #fdb73e;
-$secondary: #fed48b;
+$secondary: #977b49;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #f7f7ff;
@@ -13,8 +13,8 @@ $steel: #5C5A5A;
 // Links
 $link-color: $primary;
 $link-decoration: none;
-$link-hover-color: lighten($primary, 10%);
-$link-hover-decoration: underline;
+$link-hover-color: lighten($primary, 20%);
+$link-hover-decoration: none;
 
 // Fonts
 $font-family-base: Helvetica, Arial, sans-serif, -apple-system;
