--- a/_sass/bootstrap/utilities/_text.scss
+++ b/_sass/bootstrap/utilities/_text.scss
@@ -42,7 +42,7 @@
 
 // Contextual colors
 
-.text-white { color: $white !important; }
+.text-white { color: var(--background) !important; }
 
 @each $color, $value in $theme-colors {
   @include text-emphasis-variant(".text-#{$color}", $value, true);
@@ -51,8 +51,8 @@
 .text-body { color: $body-color !important; }
 .text-muted { color: $text-muted !important; }
 
-.text-black-50 { color: rgba($black, .5) !important; }
-.text-white-50 { color: rgba($white, .5) !important; }
+.text-black-50 { color: rgba(var(--text-title), .5) !important; }
+.text-white-50 { color: rgba(var(--background), .5) !important; }
 
 // Misc
 
