--- a/_sass/components/_call.scss
+++ b/_sass/components/_call.scss
@@ -1,7 +1,7 @@
 .call {
   position: relative;
   overflow: hidden;
-  background-color: $white-offset;
+  background-color: var(--background-offset);
   border-radius: 4px;
   // box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
   width: 100%;
@@ -33,17 +33,20 @@
   .call-name {
     font-size: 1.1rem;
     font-weight: bold;
+    color: var(--text-title);
   }
   .call-phone {
     margin-bottom: 5px;
+    color: var(--text-subtitle);
   }
   .call-email {
     a {
-      color: $black;
+      color: var(--text-subtitle);
     }
   }
   strong {
     font-weight: bold;
+    color: var(--text-title);
   }
   svg {
     fill: lighten($secondary, 40%);
