--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -1,6 +1,8 @@
 .content {
+  background-color: var(--background);
   a {
     text-decoration: none;
+    color: var(--text-subtitle);
   }
   img {
     max-width: 100%;
@@ -10,14 +12,16 @@
   }
   strong {
     font-width: bold;
+    color: var(--text-subtitle);
   }
   em {
     font-style: italic;
+    color: var(--text-subtitle);
   }
   p {
     font-family: $font-family-base;
     line-height: 1.56;
-    color: $steel;
+    color: var(--text-subtitle);
   }
   h1 {
     font-family: $font-family-base;
@@ -26,6 +30,7 @@
     font-weight: normal;
     margin-top: 30px;
     margin-bottom: 20px;
+    color: var(--text-title);
   }
   h2 {
     font-family: $font-family-base;
@@ -33,6 +38,7 @@
     font-weight: normal;
     line-height: 1.4;
     margin-top: 30px;
+    color: var(--text-title);
   }
   h3 {
     font-family: $font-family-base;
@@ -40,6 +46,7 @@
     line-height: 1.4;
     font-weight: normal;
     margin-top: 30px;
+    color: var(--text-title);
   }
   ul,
   ol {
@@ -59,35 +66,38 @@
     margin-bottom: 5px;
     line-height: 1.56;
     margin-left: 20px;
-    color: $steel;
+    color: var(--text-subtitle);
   }
   hr {
     border: none;
-    border-bottom: 1px solid $white-offset;
+    border-bottom: 1px solid var(--background-offset);
   }
   table {
     width: 100%;
     margin-top: 30px;
     margin-bottom: 30px;
+    color: var(--text-subtitle);
     th,
     td {
       padding: 5px;
       vertical-align: top;
-      border-top: 1px solid $white-offset;
+      border-top: 1px solid var(--background-offset);
     }
     thead th {
       vertical-align: bottom;
-      border-bottom: 1px solid $white-offset;
+      border-bottom: 1px solid var(--background-offset);
       text-align: left;
       font-weight: bold;
+      color: var(--text-title);
     }
     tbody + tbody {
-      border-top: 1px solid $white-offset;
+      border-top: 1px solid var(--background-offset);
+      color: var(--text-subtitle);
     }
   }
   blockquote {
     padding: 0 1em;
-    color: $steel;
+    color: var(--text-subtitle);
     border-left: .25em solid $secondary;
   }
 }
