--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,11 +1,11 @@
 .header {
   color: $primary;
-  background-color: #ffffff;
+  background-color: var(--background-offset);
   display: flex;
   justify-content: space-between;
   align-items: center;
   // box-shadow: 0 1px 15px rgba(50, 50, 93, 0.2);
-  border-bottom: 1px solid $white-offset;
+  border-bottom: 1px solid var(--background-line);
   padding: 10px 0px;
   .container {
     display: flex;
@@ -24,4 +24,10 @@
       position: static;
     }
   }
+}
+.header {
+  z-index: 9999;
+  position:-webkit-sticky;
+  position:sticky;
+  top:0;
 }
