--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -10,7 +10,7 @@
     padding-bottom: 140px;
   }
   h1 {
-    color: $black;
+    color: var(--text-title);
     font-size: 42px;
     font-weight: bold;
     line-height: 1.2;
@@ -34,7 +34,7 @@
     font-size: 1.2rem;
     font-weight: light;
     line-height: 1.5;
-    color: $steel;
+    color: var(--text-subtitle);
     @include media-breakpoint-up(md) {
       width: 80%;
     }
