--- a/_sass/components/_main-menu-mobile.scss
+++ b/_sass/components/_main-menu-mobile.scss
@@ -54,7 +54,7 @@
       a {
         display: block;
         position: relative;
-        color: #ffffff;
+        color: var(--background);
         text-decoration: none;
         overflow: hidden;
         &:hover {
