--- a/_sass/components/_sub-footer.scss
+++ b/_sass/components/_sub-footer.scss
@@ -1,6 +1,6 @@
 .sub-footer {
   background: $sub-footer-background-color;
-  color: $sub-footer-text-color;
+  color: var(--sub-footer-text-color);
   padding-top: 15px;
   padding-bottom: 15px;
   @include media-breakpoint-up(md) {
