--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,4 +68,30 @@ body {
     font-size: 16px;
     line-height: 1.3;
   }
+  --text-title: #2f2f41;
+  --text-subtitle: #5C5A5A;
+  --background: #ffffff;
+  --background-offset: #f7f7ff;
+  --background-line: #f2f2f2;
+  --sub-footer-text-color: #ffffff;
+  --footer-text-color: #ffffff;
+  --footer-text-color-dark: #f7f7ff;
+}
+
+body.dark {
+  font-size: 16px;
+  line-height: 1.2;
+  font-family: $font-family-base;
+  @include media-breakpoint-up(md) {
+    font-size: 16px;
+    line-height: 1.3;
+  }
+  --text-title: #ffffff;
+  --text-subtitle: #c0c0c0;
+  --background: #2f2f41;
+  --background-offset: #434354;
+  --background-line: #3f3f3f;
+  --sub-footer-text-color: #2f2f41;
+  --footer-text-color: #2f2f41;
+  --footer-text-color-dark: #000000;
 }
