dark mode added

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,7 +78,7 @@ body {
   --footer-text-color-dark: #f7f7ff;
 }
 
-body.dark {
+body.dark-mode {
   font-size: 16px;
   line-height: 1.2;
   font-family: $font-family-base;
