--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,6 +76,7 @@ body {
   --sub-footer-text-color: #ffffff;
   --footer-text-color: #ffffff;
   --footer-text-color-dark: #f7f7ff;
+  transition: all 0.2s linear;
 }
 
 body.dark-mode {
