Dark mode styling done

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,8 @@
 <div class="social">
-  {% for item in site.data.social %}
-    <a href="{{ item.link }}" target="blank"><img src="{{ item.image | relative_url }}" title="{{ item.name }}" alt="{{ item.name }}" /></a>
-  {% endfor %}
+  <a href="https://github.com/ThomasKimble" target="blank">
+    <img src="/images/social/github-dark.svg" title="GitHub" alt="GitHub" id="logo-github" />
+  </a>
+  <a href="https://www.linkedin.com/in/thomas-oliver-kimble/" target="blank">
+    <img src="/images/social/linkedin-dark.svg" title="Linkedin" alt="Linkedin" id="logo-linkedin"/>
+  </a>
 </div>
