Updated animations, added features in projects

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -18,19 +18,66 @@ bodyClass: page-projects-list
   </div>
 </div>
 
-<div class="container pt-6 pb-6">
-  <div class="row">
-    {% for project in site.projects %}
-    <div class="col-12 col-md-6 mb-3">
-      <div class="project project-summary">
-        <div class="project-content">
-          <h2 class="project-title">
-            <a href="{{site.baseurl}}{{ project.url }}">{{ project.title }}</a>
-          </h2>
-          <p>{{ project.content | markdownify | strip_html | truncate: 100 }}</p>
+<div class="strip strip-grey">
+
+  <div class="container pt-6">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 col-lg-12 mb-2">
+        <div class="feature">
+          <div class="feature-image"><img alt="Robotics logo" src="/images/features/robotics.png" /></div>
+          <h2 class="feature-title">Robotics</h2>
         </div>
       </div>
     </div>
-    {% endfor %}
   </div>
+
+  <div class="container pt-6 pb-6">
+    <div class="row">
+      {% for project in site.projects %}
+      <div class="col-12 col-md-6 mb-3">
+        <div class="project project-summary">
+          <div class="project-content">
+            <h2 class="project-title">
+              <a href="{{site.baseurl}}{{ project.url }}">{{ project.title }}</a>
+            </h2>
+            <p>{{ project.content | markdownify | strip_html | truncate: 100 }}</p>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+
+</div>
+
+<div class="strip">
+
+  <div class="container pt-6">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 col-lg-12 mb-2">
+        <div class="feature-grey">
+          <div class="feature-image"><img alt="Space logo" src="/images/features/space.png" /></div>
+          <h2 class="feature-title">Space Technologies</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container pt-6 pb-6">
+    <div class="row">
+      {% for project in site.projects %}
+      <div class="col-12 col-md-6 mb-3">
+        <div class="project project-summary">
+          <div class="project-content">
+            <h2 class="project-title">
+              <a href="{{site.baseurl}}{{ project.url }}">{{ project.title }}</a>
+            </h2>
+            <p>{{ project.content | markdownify | strip_html | truncate: 100 }}</p>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+
 </div>
