--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -13,13 +13,12 @@
   letter-spacing: 0.025em;
   color: var(--background);
   text-decoration: none;
-  -webkit-transition: all 0.15s ease;
-  transition: all 0.15s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
   &:hover {
     color: var(--background);
-    background-color: lighten($primary, 10%);
-    transform: translateY(-1px);
-    //box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+    transform: scale(1.05) rotate(1.5deg);
+    box-shadow: 0 7px 14px var(--shadow);
     text-decoration: none;
   }
 }
