--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -29,3 +29,34 @@
     color: var(--text-subtitle);
   }
 }
+.feature-grey {
+  height: 100%;
+  border: 1px solid var(--background);
+  border-radius: 3px;
+  padding: 20px;
+  background-color: var(--background-offset);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  .feature-image {
+    flex: 0 0 auto;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  img {
+    width: 100%;
+    height: auto;
+  }
+  .feature-title {
+    color: var(--text-title);
+  }
+  .feature-content {
+    margin-bottom: 0;
+    margin-top: auto;
+    color: var(--text-subtitle);
+  }
+}
