--- a/_sass/components/_sub-footer.scss
+++ b/_sass/components/_sub-footer.scss
@@ -24,8 +24,10 @@
     }
   }
   .social {
+    transition: all 0.2s ease;
     a:first-of-type {
       margin-left: -10px;
+      transition: all 0.2s ease;
     }
   }
 }
