--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,6 +76,7 @@ body {
   --sub-footer-text-color: #ffffff;
   --footer-text-color: #ffffff;
   --footer-text-color-dark: #f7f7ff;
+  --shadow: rgba(50, 50, 93, 0.8);
 }
 
 body.dark-mode {
@@ -94,4 +95,5 @@ body.dark-mode {
   --sub-footer-text-color: #2f2f41;
   --footer-text-color: #2f2f41;
   --footer-text-color-dark: #000000;
+  --shadow: #09091B;
 }
