Front end finished

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,14 +22,24 @@ bodyClass: page-home
   </div>
 </div>
 
+
 <div class="strip">
+  <div class="container pt-1">
+    <div class="row justify-content-center">
+      <div class="col-lg-12">
+        <div class="feature-projects">
+          <h2 class="feature-title">Featured Projects</h2>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
       <div class="col-12 col-md-4 mb-1">
         <div class="project project-summary">
           <div class="project-content">
             <h2 class="project-title">
-              <a href="/projects/predictive-drone-swarms-with-limited-fov/">Predictive Drone Swarms with Limited Field of View</a>
+              <a href="/projects-robotics/predictive-drone-swarms-with-limited-fov/">Predictive Drone Swarms with Limited Field of View</a>
             </h2>
             <p>A study of the effect of limited field of view on drone swarms using a
               state of the art predictive trajectory generation and collision avoidance algorithm.</p>
@@ -41,9 +51,9 @@ bodyClass: page-home
         <div class="project project-summary">
           <div class="project-content">
             <h2 class="project-title">
-              <a href="/projects/thymio-navigation/">Path Planning and Navigation of Thymio Robots</a>
+              <a href="/projects-robotics/thymio-navigation/">Path Planning and Navigation of Thymio Robots</a>
             </h2>
-            <p>Implementation of vision, local and global navigation, and filtering on two Thymio robots 
+            <p>Implementation of vision, local and global navigation, and filtering on two Thymio robots
                allowing them to switch positions following optimal paths.</p>
           </div>
         </div>
@@ -53,7 +63,7 @@ bodyClass: page-home
         <div class="project project-summary">
           <div class="project-content">
             <h2 class="project-title">
-              <a href="/projects/business-advisory/">Rocket Crash:<br> A Nintendo DS Game</a>
+              <a href="/projects-cs/rocket-crash-NDS/">Rocket Crash:<br> A Nintendo DS Game</a>
             </h2>
             <p>I designed and implemented a game on the Nintendo DS microprogrammed embedded system using the C language.</p>
           </div>
@@ -71,7 +81,7 @@ bodyClass: page-home
         <div class="project project-summary">
           <div class="project-content">
             <h2 class="project-title">
-              <a> <center>...</center> </a>
+              <a href="/projects/"><center>...</center></a>
             </h2>
           </div>
         </div>
