--- a/_sass/components/_main-menu-mobile.scss
+++ b/_sass/components/_main-menu-mobile.scss
@@ -1,6 +1,6 @@
 .main-menu-mobile {
   position: fixed;
-  background: $primary;
+  background: var(--main-menu-background);
   top: 0;
   left: 0;
   width: 100%;
@@ -40,7 +40,7 @@
   }
   ul {
     font-size: 30px;
-    font-family: $font-family-heading;
+    font-family: $font-family-base;
     text-align: center;
     list-style: none;
     padding: 0;
@@ -54,7 +54,7 @@
       a {
         display: block;
         position: relative;
-        color: var(--background);
+        color: var(--main-menu-text);
         text-decoration: none;
         overflow: hidden;
         &:hover {
