--- a/_sass/components/_strip.scss
+++ b/_sass/components/_strip.scss
@@ -54,3 +54,10 @@
 .strip-bg-cover {
   background-size: cover;
 }
+
+.strip-text {
+  h1 {
+    text-decoration: none;
+    color: var(--text-title);
+  }
+}
