--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -81,8 +81,8 @@ bodyClass: page-projects-list
     <div class="row justify-content-center">
       <div class="col-12 col-md-6 col-lg-12 mb-2">
         <div class="feature-projects">
-          <div class="feature-image"><img alt="Space logo" src="/images/features/computer_science.png" /></div>
-          <h2 class="feature-title">Computer Science</h2>
+          <div class="feature-image"><img alt="Software logo" src="/images/features/computer_science.png" /></div>
+          <h2 class="feature-title">Software Engineering</h2>
         </div>
       </div>
     </div>
