--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,6 +22,10 @@ bodyClass: page-home
   </div>
 </div>
 
+<div class="strip">
+  <div class="container pt-6">
+  </div>
+</div>
 
 <div class="strip">
   <div class="container pt-1">
