--- a/_includes/style-switcher.html
+++ b/_includes/style-switcher.html
@@ -1,8 +1,7 @@
 <div class="style-switcher">
-  <!-- <div class="style-toggler s-icon">
-    <i class="fas fa-palette fa-lg"> </i>
-  </div> -->
-  <div class="day-night s-icon">
-    <i class="fas fa-lg"> </i>
+  <div class="container">
+    <div class="day-night s-icon">
+      <i class="fas fa-lg"> </i>
+    </div>
   </div>
 </div>
