--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -6,12 +6,12 @@ bodyClass: page-projects-list
 <div class="intro">
   <div class="container">
     <div class="row justify-content-start">
-      <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
+      <div class="col-12 col-lg-6 order-1">
         {{ content }}
       </div>
       {% if page.intro_image %}
-      <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
-        <img alt={{ page.title }} class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
+      <div class="col-12 col-lg-6 order-2 order-lg-2 position-relative">
+        <img alt={{ page.title }} class="intro-image{% if page.intro_image_absolute %} intro-image-absolute-project{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
       </div>
       {% endif %}
     </div>
@@ -21,7 +21,7 @@ bodyClass: page-projects-list
 <div class="strip">
   <div class="container pt-1">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-6 col-lg-12 mb-2">
+      <div class="col-12 col-md-12 col-lg-12 mb-2">
         <div class="feature-projects">
           <div class="feature-image"><img alt="Robotics logo" src="/images/features/robotics.png" /></div>
           <h2 class="feature-title">Robotics</h2>
@@ -50,7 +50,7 @@ bodyClass: page-projects-list
 <div class="strip">
   <div class="container pt-1">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-6 col-lg-12 mb-2">
+      <div class="col-12 col-md-12 col-lg-12 mb-2">
         <div class="feature-projects">
           <div class="feature-image"><img alt="Space logo" src="/images/features/space.png" /></div>
           <h2 class="feature-title">Space Tehcnologies</h2>
@@ -79,7 +79,7 @@ bodyClass: page-projects-list
 <div class="strip">
   <div class="container pt-1">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-6 col-lg-12 mb-2">
+      <div class="col-12 col-md-12 col-lg-12 mb-2">
         <div class="feature-projects">
           <div class="feature-image"><img alt="Software logo" src="/images/features/computer_science.png" /></div>
           <h2 class="feature-title">Software Engineering</h2>
@@ -108,7 +108,7 @@ bodyClass: page-projects-list
 <div class="strip">
   <div class="container pt-1">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-6 col-lg-12 mb-2">
+      <div class="col-12 col-md-12 col-lg-12 mb-2">
         <div class="feature-projects">
           <div class="feature-image"><img alt="Space logo" src="/images/features/music.png" /></div>
           <h2 class="feature-title">Music</h2>
@@ -137,7 +137,7 @@ bodyClass: page-projects-list
 <div class="strip">
   <div class="container pt-1">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-6 col-lg-12 mb-2">
+      <div class="col-12 col-md-12 col-lg-12 mb-2">
         <div class="feature-projects">
           <div class="feature-image"><img alt="Space logo" src="/images/features/design.png" /></div>
           <h2 class="feature-title">Design</h2>
