--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -1,35 +1,58 @@
 .intro-image {
   width: 100%;
   height: auto;
-  margin-top: -40px;
+  margin-top: 30px;
 }
 .intro-image-absolute {
   max-width: none;
-
   padding: 0;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
   @include media-breakpoint-up(sm) {
   }
   @include media-breakpoint-up(md) {
-    position: absolute;
-    bottom: -50px;
-    left: -50px;
-    width: 700px;
   }
   @include media-breakpoint-up(lg) {
-    bottom: -60px;
+    position: absolute;
+    bottom: 30px;
     left: -60px;
-    width: 800px;
+    width: 600px;
   }
   @include media-breakpoint-up(xl) {
-    bottom: -100px;
+    bottom: -10px;
     left: -70px;
-    width: 850px;
+    width: 720px;
   }
 }
 .intro-image-hide-mobile {
   display: none;
   @include media-breakpoint-up(md) {
     display: block;
+  }
+}
+
+.intro-image-absolute-project {
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  max-width: none;
+  padding: 0;
+  margin-bottom: 0px;
+  @include media-breakpoint-up(sm) {
+  }
+  @include media-breakpoint-up(md) {
+    width: 75%;
+    margin-left: 65px;
+  }
+  @include media-breakpoint-up(lg) {
+    margin-left: 0px;
+    position: absolute;
+    bottom: -50px;
+    left: 0px;
+    width: 450px;
+  }
+  @include media-breakpoint-up(xl) {
+    bottom: -100px;
+    left: 0px;
+    width: 550px;
   }
 }
