--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -5,20 +5,20 @@
   padding-top: 60px;
   padding-bottom: 60px;
   overflow: hidden;
-  @include media-breakpoint-up(md) {
-    padding-top: 140px;
-    padding-bottom: 140px;
+  @include media-breakpoint-up(lg) {
+    padding-top: 100px;
+    padding-bottom: 110px;
   }
   h1 {
     color: var(--text-title);
     font-size: 42px;
     font-weight: bold;
     line-height: 1.2;
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       width: 80%;
       font-size: 48px;
     }
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       font-size: 50px;
     }
   }
@@ -35,9 +35,6 @@
     font-weight: light;
     line-height: 1.5;
     color: var(--text-subtitle);
-    @include media-breakpoint-up(md) {
-      width: 80%;
-    }
   }
 }
 
