--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -69,6 +69,20 @@ body {
     line-height: 1.3;
   }
   --text-title: #2f2f41;
+  --text-subtitle: #2f2f41;
+  --background: #2f2f41;
+  --background-offset: #434354;
+  --background-line: #2f2f41;
+  --sub-footer-text-color: #2f2f41;
+  --footer-text-color: #2f2f41;
+  --footer-text-color-dark: #2f2f41;
+  --shadow: #2f2f41;
+  --main-menu-text: #fdb73e;
+  --main-menu-background: #2f2f41;
+}
+
+body.light-mode {
+  --text-title: #2f2f41;
   --text-subtitle: #5C5A5A;
   --background: #ffffff;
   --background-offset: #F2F2FA;
@@ -82,13 +96,6 @@ body {
 }
 
 body.dark-mode {
-  font-size: 16px;
-  line-height: 1.2;
-  font-family: $font-family-base;
-  @include media-breakpoint-up(md) {
-    font-size: 16px;
-    line-height: 1.3;
-  }
   --text-title: #ffffff;
   --text-subtitle: #c0c0c0;
   --background: #2f2f41;
