--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -1,5 +1,6 @@
 .logo {
   display: none;
+  transition: all 0.2s ease;
   @include media-breakpoint-up(sm) {
     display: block;
   }
@@ -11,8 +12,12 @@
     width: 100%;
     height: 100%;
   }
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 .logo-mobile {
+  transition: all 0.2s ease;
   display: block;
   width: 40px;
   padding: 10px 0 10px 0;
@@ -27,5 +32,8 @@
     display: block;
     width: 100%;
     height: 100%;
+  }
+  &:hover {
+    transform: scale(1.1);
   }
 }
