--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@ bodyClass: page-home
         <div class="project project-summary">
           <div class="project-content">
             <h2 class="project-title">
-              <a href="/projects-cs/mobility_and_friendship/">Does mobility make or break friendships?</a>
+              <a href="/projects-cs/mobility_and_friendship/">Does Mobility Make or Break Friendships?</a>
             </h2>
             <p>
               A study of the effect of Mobility on Friendship using a different models to predict how many friendships Foursquare users will make or break in a 22 month time period.
