model-viewer added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
   <meta name="twitter:card" content="{{ site.seo.meta_twitter_card }}" />
   <meta name="twitter:site" content="{{ site.seo.meta_twitter_site }}" />
   <meta name="twitter:creator" content="{{ site.seo.meta_twitter_creator }}" />
+
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body class='page {{page.bodyClass}}'>
   {% include main-menu-mobile.html %}
