--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -108,3 +108,9 @@ body.dark-mode {
   --main-menu-text: #fdb73e;
   --main-menu-background: #2f2f41;
 }
+
+model-viewer {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+}
