Some pedals added

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -22,3 +22,29 @@
     text-decoration: none;
   }
 }
+
+.button_next {
+  white-space: nowrap;
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 14px;
+  //box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  background: var(--background-offset);
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: $primary;
+  text-decoration: none;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  &:hover {
+    color: $primary;
+    transform: scale(1.05);
+    box-shadow: 0 5px 10px var(--shadow);
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
