--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,7 +110,23 @@ body.dark-mode {
 }
 
 model-viewer {
-  width: 500px;
-  height: 500px;
+  width: 300px;
+  height: 300px;
   margin: 0 auto;
+  @include media-breakpoint-up(sm) {
+    width: 350px;
+    height: 350px;
+  }
+  @include media-breakpoint-up(md) {
+    width: 450px;
+    height: 450px;
+  }
+  @include media-breakpoint-up(lg) {
+    width: 500px;
+    height: 500px;
+  }
+  @include media-breakpoint-up(xl) {
+    width: 600px;
+    height: 600px;
+  }
 }
