Butterfly Shelf added

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -53,7 +53,7 @@ bodyClass: page-projects-list
       <div class="col-12 col-md-12 col-lg-12 mb-2">
         <div class="feature-projects">
           <div class="feature-image"><img alt="Space logo" src="/images/features/space.png" /></div>
-          <h2 class="feature-title">Space Tehcnologies</h2>
+          <h2 class="feature-title">Space Technologies</h2>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@ bodyClass: page-projects-list
   </div>
   <div class="container pt-2 pb-6">
     <div class="row">
-      {% for project in site.projects-cs %}
+      {% for project in site.projects-software %}
       <div class="col-12 col-md-6 mb-3">
         <div class="project project-summary">
           <div class="project-content">
