--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -127,7 +127,7 @@
   width: auto;
   margin-top: -22px;
   padding: 18px;
-  color: white;
+  color: $primary;
   font-weight: bold;
   font-size: 18px;
   transition: 0.3s ease;
@@ -145,7 +145,7 @@
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(0,0,0,0.3);
 }
 
 /* The dots/bullets/indicators */
