--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ $link-hover-decoration: none;
 
 // Fonts
 $font-family-base: Helvetica, Arial, sans-serif, -apple-system;
-$font-family-heading: 'Playfair Display', serif, -apple-system;
+$font-family-heading: 'Archivo', sans-serif, -apple-system;
 
 // Footer
 $footer-background-color: $primary;
