new toggle switch, articles added

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -31,7 +31,7 @@ bodyClass: page-projects-list
   </div>
   <div class="container pt-2 pb-6">
     <div class="row">
-      {% for project in site.projects-robotics %}
+      {% for project in site.robotics %}
       <div class="col-12 col-md-6 mb-3">
         <div class="project project-summary">
           <div class="project-content">
@@ -60,7 +60,7 @@ bodyClass: page-projects-list
   </div>
   <div class="container pt-2 pb-6">
     <div class="row">
-      {% for project in site.projects-space %}
+      {% for project in site.space %}
       <div class="col-12 col-md-6 mb-3">
         <div class="project project-summary">
           <div class="project-content">
@@ -89,7 +89,7 @@ bodyClass: page-projects-list
   </div>
   <div class="container pt-2 pb-6">
     <div class="row">
-      {% for project in site.projects-software %}
+      {% for project in site.software %}
       <div class="col-12 col-md-6 mb-3">
         <div class="project project-summary">
           <div class="project-content">
@@ -118,7 +118,7 @@ bodyClass: page-projects-list
   </div>
   <div class="container pt-2 pb-6">
     <div class="row">
-      {% for project in site.projects-design %}
+      {% for project in site.design %}
       <div class="col-12 col-md-6 mb-3">
         <div class="project project-summary">
           <div class="project-content">
@@ -147,7 +147,7 @@ bodyClass: page-projects-list
   </div>
   <div class="container pt-2 pb-6">
     <div class="row">
-      {% for project in site.projects-music %}
+      {% for project in site.music %}
       <div class="col-12 col-md-6 mb-3">
         <div class="project project-summary">
           <div class="project-content">
