--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,6 +79,9 @@ body {
   --shadow: #2f2f41;
   --main-menu-text: #fdb73e;
   --main-menu-background: #2f2f41;
+  --black: #161628;
+  --white: #F2F2FA;
+  --primary: #fdb73e;
 }
 
 body.light-mode {
