--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
   display: none;
-  transition: all 0.2s ease;
+  transition: all 0.2s linear;
   @include media-breakpoint-up(sm) {
     display: block;
   }
@@ -17,7 +17,7 @@
   }
 }
 .logo-mobile {
-  transition: all 0.2s ease;
+  transition: all 0.2s linear;
   display: block;
   width: 40px;
   padding: 10px 0 10px 0;
@@ -32,8 +32,5 @@
     display: block;
     width: 100%;
     height: 100%;
-  }
-  &:hover {
-    transform: scale(1.1);
   }
 }
