--- a/_sass/components/_main-menu-mobile.scss
+++ b/_sass/components/_main-menu-mobile.scss
@@ -19,7 +19,7 @@
     height: 100%;
     z-index: 20;
     li {
-      animation: fadeInRight 0.5s ease forwards;
+      animation: fadeInRight 0.5s linear forwards;
       animation-delay: 0.35s;
       &:nth-of-type(2) {
         animation-delay: 0.4s;
