--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,6 +55,7 @@ $sub-footer-text-color: $white;
 @import 'components/strip';
 @import 'components/feature';
 @import 'components/social';
+@import 'components/style-switcher';
 
 // Pages
 @import 'pages/home';
@@ -68,17 +69,6 @@ body {
     font-size: 18px;
     line-height: 1.3;
   }
-  --text-title: #2f2f41;
-  --text-subtitle: #2f2f41;
-  --background: #2f2f41;
-  --background-offset: #434354;
-  --background-line: #2f2f41;
-  --sub-footer-text-color: #2f2f41;
-  --footer-text-color: #2f2f41;
-  --footer-text-color-dark: #2f2f41;
-  --shadow: #2f2f41;
-  --main-menu-text: #fdb73e;
-  --main-menu-background: #2f2f41;
   --black: #161628;
   --white: #F2F2FA;
   --primary: #fdb73e;
