--- a/_sass/components/_style-switcher.scss
+++ b/_sass/components/_style-switcher.scss
@@ -16,14 +16,10 @@
   }
 }
 
-* {
-  box-sizing: border-box;
-}
-
 .toggle-modifier {
   top: 25px;
   right: 50%;
-  margin-right: -30px;
+  margin-right: -32px;
   z-index: 41;
   @include media-breakpoint-up(xs) {
   }
@@ -58,6 +54,11 @@
   top: 3px;
   border-radius: 50%;
   position: absolute;
-  background-color: var(--white);
+  background-color: #f2f2fa;
   transition: all 0.2s linear;
+  @include media-breakpoint-up(xs) {
+  }
+  @include media-breakpoint-up(sm) {
+    background-color: var(--white);
+  }
 }
