--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -47,6 +47,35 @@ bodyClass: page-projects-list
   </div>
 </a>
 
+<a class="strip" id="projects-software">
+  <div class="container pt-1">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-12 col-lg-12 mb-2">
+        <div class="feature-projects">
+          <div class="feature-image"><img alt="Software logo" src="/images/features/computer_science.png" /></div>
+          <h2 class="feature-title">Software Engineering and Data Science</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container pt-2 pb-6">
+    <div class="row">
+      {% for project in site.software %}
+      <div class="col-12 col-md-6 mb-3">
+        <div class="project project-summary">
+          <div class="project-content">
+            <h2 class="project-title">
+              <a href="{{site.baseurl}}{{ project.url }}">{{ project.title }}</a>
+            </h2>
+            <p>{{ project.content | markdownify | strip_html | truncate: 100 }}</p>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</a>
+
 <a class="strip" id="projects-space">
   <div class="container pt-1">
     <div class="row justify-content-center">
@@ -73,35 +102,9 @@ bodyClass: page-projects-list
       </div>
       {% endfor %}
     </div>
-  </div>
-</a>
-
-<a class="strip" id="projects-software">
-  <div class="container pt-1">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-12 col-lg-12 mb-2">
-        <div class="feature-projects">
-          <div class="feature-image"><img alt="Software logo" src="/images/features/computer_science.png" /></div>
-          <h2 class="feature-title">Software Engineering</h2>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container pt-2 pb-6">
-    <div class="row">
-      {% for project in site.software %}
-      <div class="col-12 col-md-6 mb-3">
-        <div class="project project-summary">
-          <div class="project-content">
-            <h2 class="project-title">
-              <a href="{{site.baseurl}}{{ project.url }}">{{ project.title }}</a>
-            </h2>
-            <p>{{ project.content | markdownify | strip_html | truncate: 100 }}</p>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
+    <h2 class="project-title">
+      <p style="text-align:center">Coming Soon...</p>
+    </h2>
   </div>
 </a>
 
