--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,10 +63,9 @@ bodyClass: page-home
         <div class="project project-summary">
           <div class="project-content">
             <h2 class="project-title">
-              <a href="/design/pedals/">Design of a Guitar Effect Pedal Collection</a>
+              <a href="/robotics/thymio/">Navigation and Path Planning for the Thymio Robot</a>
             </h2>
-            <p>I created a guitar effect pedal collection to showcase my skills in analog circuit design,
-            CAD design, and rendering.</p>
+            <p>We used computer vision to detect and track two seperate Thymios, and switch their positions using following an optimal path, all while avoiding local obstacles.</p>
           </div>
         </div>
       </div>
